0.8/_sources/checks_gallery/tabular/model_evaluation/plot_single_dataset_performance.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "checks_gallery/tabular/model_evaluation/plot_single_dataset_performance.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_checks_gallery_tabular_model_evaluation_plot_single_dataset_performance.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_checks_gallery_tabular_model_evaluation_plot_single_dataset_performance.py:


.. _plot_tabular_single_dataset_performance:

Single Dataset Performance
**********************
This notebooks provides an overview for using and understanding single dataset performance check.

**Structure:**

* `What is the purpose of the check? <#what-is-the-purpose-of-the-check>`__
* `Generate data & model <#generate-data-model>`__
* `Run the check <#run-the-check>`__
* `Define a condition <#define-a-condition>`__
* `Using a custom scorer <#using-a-custom-scorer>`__

What is the purpose of the check?
=================================
This check is designed for evaluating a model's performance on a labeled dataset based on a scorer or multiple scorers.

Scorers are a convention of sklearn to evaluate a model,
it is a function which accepts (model, X, y_true) and returns a float result which is the score.
A sklearn convention is that higher scores are better than lower scores. For additional details `see scorers
documentation <https://scikit-learn.org/stable/modules/model_evaluation.html#scoring>`_.

The default scorers that are used are F1, Percision, and Recall for Classification
and Negative Root Mean Square Error, Negative Mean Absolute Error, and R2 for Regression.

.. GENERATED FROM PYTHON SOURCE LINES 31-33

Generate data & model
=====================

.. GENERATED FROM PYTHON SOURCE LINES 33-39

.. code-block:: default


    from deepchecks.tabular.datasets.classification.iris import load_data, load_fitted_model

    _, test_dataset = load_data()
    model = load_fitted_model()








.. GENERATED FROM PYTHON SOURCE LINES 40-45

Run the check
=============

You can select which scorers to use by passing either a list or a dict of scorers to the check,
the full list of possible scorers can be seen at scorers.py.

.. GENERATED FROM PYTHON SOURCE LINES 45-52

.. code-block:: default


    from deepchecks.tabular.checks import SingleDatasetPerformance

    check = SingleDatasetPerformance(scorers=['recall_per_class', 'precision_per_class', 'f1_macro', 'f1_micro'])
    result = check.run(test_dataset, model)
    result.show()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Single Dataset Performance</title>
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
                background-color: white;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
    </head>
    <body>
        <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.1/dist/embed.js" crossorigin="anonymous"></script>
    

    <script type="application/vnd.jupyter.widget-state+json">
    {"version_major": 2, "version_minor": 0, "state": {"b69be6c1726f43e996a7dd3141094c1f": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "children": ["IPY_MODEL_2d32995e28b2404c976063ae1b79c2f0", "IPY_MODEL_999a8f8556f6457195f5ac2d5f9fd22c", "IPY_MODEL_9f57a22f9e2d4f0aa35aaeb84fd6d37c", "IPY_MODEL_f4ff7a90778941a3b83e120aa7d96fe6"], "layout": "IPY_MODEL_706a1588f4964d62b92a52d32540ade7"}}, "2d32995e28b2404c976063ae1b79c2f0": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_412b699a2a794980ab31a8445003aba1", "style": "IPY_MODEL_71a7cf59479e4e83aa22f5ff35178830", "value": "<h4><b>Single Dataset Performance</b></h4>"}}, "412b699a2a794980ab31a8445003aba1": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "71a7cf59479e4e83aa22f5ff35178830": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "999a8f8556f6457195f5ac2d5f9fd22c": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_6b5ac42c22ce485bba82516495b7fbff", "style": "IPY_MODEL_c1d24e834e714c9ca8cf9538d55cf18d", "value": "<p>Summarize given model performance on the train and test datasets based on selected scorers. <a href=\"https://docs.deepchecks.com/0.8/checks_gallery/tabular/model_evaluation/plot_single_dataset_performance.html?utm_source=display_output&utm_medium=referral&utm_campaign=check_link\" target=\"_blank\">Read More...</a></p>"}}, "6b5ac42c22ce485bba82516495b7fbff": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "c1d24e834e714c9ca8cf9538d55cf18d": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "9f57a22f9e2d4f0aa35aaeb84fd6d37c": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_e7d78080805b4238a12159ac186ba255", "style": "IPY_MODEL_048568b6df404ed697e8444dfd33378a"}}, "e7d78080805b4238a12159ac186ba255": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "048568b6df404ed697e8444dfd33378a": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "f4ff7a90778941a3b83e120aa7d96fe6": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_fb735632a604450daf91516c7911c36e", "IPY_MODEL_fa8a3924450e4914bf60b7caea1b374a"], "layout": "IPY_MODEL_5280006057604550830255b41be760ac"}}, "fb735632a604450daf91516c7911c36e": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_64577c199e094045907cbeb9b2515374", "style": "IPY_MODEL_7842bd0c44ad4d98aaaf721323c634cb", "value": "<h5><b>Additional Outputs</b></h5>"}}, "64577c199e094045907cbeb9b2515374": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "7842bd0c44ad4d98aaaf721323c634cb": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "fa8a3924450e4914bf60b7caea1b374a": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_a5d66e3c881249c68483d6e1be186bf0", "style": "IPY_MODEL_ef8de6e8252d479aaac1ffbcd08605bd", "value": "<style type=\"text/css\">\n#T_402cb_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_402cb_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_402cb_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_402cb_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_402cb_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_402cb_\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th class=\"col_heading level0 col0\" >Class</th>\n      <th class=\"col_heading level0 col1\" >Metric</th>\n      <th class=\"col_heading level0 col2\" >Value</th>\n      <th class=\"col_heading level0 col3\" >Number of samples</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_402cb_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n      <td id=\"T_402cb_row0_col0\" class=\"data row0 col0\" >0</td>\n      <td id=\"T_402cb_row0_col1\" class=\"data row0 col1\" >recall</td>\n      <td id=\"T_402cb_row0_col2\" class=\"data row0 col2\" >1.00</td>\n      <td id=\"T_402cb_row0_col3\" class=\"data row0 col3\" >13</td>\n    </tr>\n    <tr>\n      <th id=\"T_402cb_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n      <td id=\"T_402cb_row1_col0\" class=\"data row1 col0\" >1</td>\n      <td id=\"T_402cb_row1_col1\" class=\"data row1 col1\" >recall</td>\n      <td id=\"T_402cb_row1_col2\" class=\"data row1 col2\" >1.00</td>\n      <td id=\"T_402cb_row1_col3\" class=\"data row1 col3\" >13</td>\n    </tr>\n    <tr>\n      <th id=\"T_402cb_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n      <td id=\"T_402cb_row2_col0\" class=\"data row2 col0\" >2</td>\n      <td id=\"T_402cb_row2_col1\" class=\"data row2 col1\" >recall</td>\n      <td id=\"T_402cb_row2_col2\" class=\"data row2 col2\" >0.83</td>\n      <td id=\"T_402cb_row2_col3\" class=\"data row2 col3\" >12</td>\n    </tr>\n    <tr>\n      <th id=\"T_402cb_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n      <td id=\"T_402cb_row3_col0\" class=\"data row3 col0\" >0</td>\n      <td id=\"T_402cb_row3_col1\" class=\"data row3 col1\" >precision</td>\n      <td id=\"T_402cb_row3_col2\" class=\"data row3 col2\" >1.00</td>\n      <td id=\"T_402cb_row3_col3\" class=\"data row3 col3\" >13</td>\n    </tr>\n    <tr>\n      <th id=\"T_402cb_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n      <td id=\"T_402cb_row4_col0\" class=\"data row4 col0\" >1</td>\n      <td id=\"T_402cb_row4_col1\" class=\"data row4 col1\" >precision</td>\n      <td id=\"T_402cb_row4_col2\" class=\"data row4 col2\" >0.87</td>\n      <td id=\"T_402cb_row4_col3\" class=\"data row4 col3\" >13</td>\n    </tr>\n    <tr>\n      <th id=\"T_402cb_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n      <td id=\"T_402cb_row5_col0\" class=\"data row5 col0\" >2</td>\n      <td id=\"T_402cb_row5_col1\" class=\"data row5 col1\" >precision</td>\n      <td id=\"T_402cb_row5_col2\" class=\"data row5 col2\" >1.00</td>\n      <td id=\"T_402cb_row5_col3\" class=\"data row5 col3\" >12</td>\n    </tr>\n    <tr>\n      <th id=\"T_402cb_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n      <td id=\"T_402cb_row6_col0\" class=\"data row6 col0\" ><NA></td>\n      <td id=\"T_402cb_row6_col1\" class=\"data row6 col1\" >f1_macro</td>\n      <td id=\"T_402cb_row6_col2\" class=\"data row6 col2\" >0.95</td>\n      <td id=\"T_402cb_row6_col3\" class=\"data row6 col3\" >38</td>\n    </tr>\n    <tr>\n      <th id=\"T_402cb_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n      <td id=\"T_402cb_row7_col0\" class=\"data row7 col0\" ><NA></td>\n      <td id=\"T_402cb_row7_col1\" class=\"data row7 col1\" >f1_micro</td>\n      <td id=\"T_402cb_row7_col2\" class=\"data row7 col2\" >0.95</td>\n      <td id=\"T_402cb_row7_col3\" class=\"data row7 col3\" >38</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "a5d66e3c881249c68483d6e1be186bf0": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "ef8de6e8252d479aaac1ffbcd08605bd": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "5280006057604550830255b41be760ac": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "706a1588f4964d62b92a52d32540ade7": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}}}
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "b69be6c1726f43e996a7dd3141094c1f"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 53-59

Define a condition
==================
We can define on our check a condition to validate that the different metric scores are above a certain threshold.
Using the ``class_mode`` argument we can define select a sub set of the classes to use for the condition.

Let's add a condition to the check and see what happens when it fails:

.. GENERATED FROM PYTHON SOURCE LINES 59-64

.. code-block:: default


    check.add_condition_greater_than(threshold=0.85, class_mode='all')
    result = check.run(test_dataset, model)
    result.show(show_additional_outputs=False)






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Single Dataset Performance</title>
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
                background-color: white;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
    </head>
    <body>
        <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.1/dist/embed.js" crossorigin="anonymous"></script>
    

    <script type="application/vnd.jupyter.widget-state+json">
    {"version_major": 2, "version_minor": 0, "state": {"140271c69afe473abc32ad748b328e90": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "children": ["IPY_MODEL_ca57f496cb784d17a73b3953dfbb21ed", "IPY_MODEL_3477ae957ced4f83a327151a5e52e2d4", "IPY_MODEL_3adca3642a4d4e57a234070192e8bd3a"], "layout": "IPY_MODEL_42c27d896aec4645af9ea6fd227f1ee8"}}, "ca57f496cb784d17a73b3953dfbb21ed": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_6dfbb9cc84574c7ebdf69d89748f89f6", "style": "IPY_MODEL_f9955b929b6346499d772ed8ad8b9fab", "value": "<h4><b>Single Dataset Performance</b></h4>"}}, "6dfbb9cc84574c7ebdf69d89748f89f6": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "f9955b929b6346499d772ed8ad8b9fab": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "3477ae957ced4f83a327151a5e52e2d4": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_1da48bb5674e45eeb152762c9e5652f0", "style": "IPY_MODEL_89943f96e4334fd9b3883ff263e57276", "value": "<p>Summarize given model performance on the train and test datasets based on selected scorers. <a href=\"https://docs.deepchecks.com/0.8/checks_gallery/tabular/model_evaluation/plot_single_dataset_performance.html?utm_source=display_output&utm_medium=referral&utm_campaign=check_link\" target=\"_blank\">Read More...</a></p>"}}, "1da48bb5674e45eeb152762c9e5652f0": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "89943f96e4334fd9b3883ff263e57276": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "3adca3642a4d4e57a234070192e8bd3a": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_c3bc36a4d8a74978a70d099569acacbd", "style": "IPY_MODEL_d002ca6bad8f4485bb63b899ef1c89d0", "value": "<h5><b>Conditions Summary</b></h5><style type=\"text/css\">\n#T_8e4cf_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_8e4cf_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_8e4cf_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_8e4cf_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_8e4cf_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_8e4cf_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Status</th>\n      <th class=\"col_heading level0 col1\" >Condition</th>\n      <th class=\"col_heading level0 col2\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_8e4cf_row0_col0\" class=\"data row0 col0\" ><div style=\"color: red;text-align: center\">\u2716</div></td>\n      <td id=\"T_8e4cf_row0_col1\" class=\"data row0 col1\" >Selected metrics scores are greater than 0.85</td>\n      <td id=\"T_8e4cf_row0_col2\" class=\"data row0 col2\" >Failed for metrics: ['recall']</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "c3bc36a4d8a74978a70d099569acacbd": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "d002ca6bad8f4485bb63b899ef1c89d0": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "42c27d896aec4645af9ea6fd227f1ee8": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}}}
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "140271c69afe473abc32ad748b328e90"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 65-66

We detected that the Recall score is below specified threshold in at least one of the classes.

.. GENERATED FROM PYTHON SOURCE LINES 68-72

Using a custom scorer
=========================
In addition to the built-in scorers, we can define our own scorer based on sklearn api
and run it using the check alongside other scorers:

.. GENERATED FROM PYTHON SOURCE LINES 72-80

.. code-block:: default


    from sklearn.metrics import fbeta_score, make_scorer

    fbeta_scorer = make_scorer(fbeta_score, labels=[0, 1, 2], average=None, beta=0.2)

    check = SingleDatasetPerformance(scorers={'my scorer': fbeta_scorer, 'recall': 'recall_per_class'})
    result = check.run(test_dataset, model)
    result.show()





.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Single Dataset Performance</title>
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
                background-color: white;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
    </head>
    <body>
        <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.1/dist/embed.js" crossorigin="anonymous"></script>
    

    <script type="application/vnd.jupyter.widget-state+json">
    {"version_major": 2, "version_minor": 0, "state": {"99bc59778b0b40759de3f9e9300bae1a": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "children": ["IPY_MODEL_c4e329bdf3bc4521aa5e67836779bfaa", "IPY_MODEL_c9fd45cc85fc4aab94d0e829dd90ceca", "IPY_MODEL_b13026f2baea4606a8d47398333927c7", "IPY_MODEL_9d4b08c95dbb4fbda432107da06480d8"], "layout": "IPY_MODEL_48aa75b48dde481db8aa843bf1ce047b"}}, "c4e329bdf3bc4521aa5e67836779bfaa": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_397c42ea46b845d78acf8e4fe7a7300d", "style": "IPY_MODEL_bd035e308aa14cfabe9dde6b701e11f7", "value": "<h4><b>Single Dataset Performance</b></h4>"}}, "397c42ea46b845d78acf8e4fe7a7300d": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "bd035e308aa14cfabe9dde6b701e11f7": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "c9fd45cc85fc4aab94d0e829dd90ceca": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_c914f12b188d436c9892c012803c3bd6", "style": "IPY_MODEL_803aa485fa63465f99fc6ce347d88794", "value": "<p>Summarize given model performance on the train and test datasets based on selected scorers. <a href=\"https://docs.deepchecks.com/0.8/checks_gallery/tabular/model_evaluation/plot_single_dataset_performance.html?utm_source=display_output&utm_medium=referral&utm_campaign=check_link\" target=\"_blank\">Read More...</a></p>"}}, "c914f12b188d436c9892c012803c3bd6": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "803aa485fa63465f99fc6ce347d88794": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "b13026f2baea4606a8d47398333927c7": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_85279d8611464c60860979c011bde9c2", "style": "IPY_MODEL_8aac50f7eb9a4e378872c4e5c08027fd"}}, "85279d8611464c60860979c011bde9c2": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "8aac50f7eb9a4e378872c4e5c08027fd": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "9d4b08c95dbb4fbda432107da06480d8": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_10b9ffd2585f432fb7306c3400ffbebe", "IPY_MODEL_2684916363b94a92bf122ece259d8fd2"], "layout": "IPY_MODEL_0018789d8e63455985e9ec9ba03b73f9"}}, "10b9ffd2585f432fb7306c3400ffbebe": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_9c2deedea6e24f42b69a2867fafb9623", "style": "IPY_MODEL_302f0107737f4051b867878583ebbcb1", "value": "<h5><b>Additional Outputs</b></h5>"}}, "9c2deedea6e24f42b69a2867fafb9623": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "302f0107737f4051b867878583ebbcb1": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "2684916363b94a92bf122ece259d8fd2": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_198d3042f8db4c1d88a8d9151147ea29", "style": "IPY_MODEL_67ab2a2651074d5eb453460e2e70e24d", "value": "<style type=\"text/css\">\n#T_b7f36_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_b7f36_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_b7f36_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_b7f36_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_b7f36_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_b7f36_\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th class=\"col_heading level0 col0\" >Class</th>\n      <th class=\"col_heading level0 col1\" >Metric</th>\n      <th class=\"col_heading level0 col2\" >Value</th>\n      <th class=\"col_heading level0 col3\" >Number of samples</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_b7f36_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n      <td id=\"T_b7f36_row0_col0\" class=\"data row0 col0\" >0</td>\n      <td id=\"T_b7f36_row0_col1\" class=\"data row0 col1\" >my scorer</td>\n      <td id=\"T_b7f36_row0_col2\" class=\"data row0 col2\" >1.00</td>\n      <td id=\"T_b7f36_row0_col3\" class=\"data row0 col3\" >13</td>\n    </tr>\n    <tr>\n      <th id=\"T_b7f36_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n      <td id=\"T_b7f36_row1_col0\" class=\"data row1 col0\" >1</td>\n      <td id=\"T_b7f36_row1_col1\" class=\"data row1 col1\" >my scorer</td>\n      <td id=\"T_b7f36_row1_col2\" class=\"data row1 col2\" >0.87</td>\n      <td id=\"T_b7f36_row1_col3\" class=\"data row1 col3\" >13</td>\n    </tr>\n    <tr>\n      <th id=\"T_b7f36_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n      <td id=\"T_b7f36_row2_col0\" class=\"data row2 col0\" >2</td>\n      <td id=\"T_b7f36_row2_col1\" class=\"data row2 col1\" >my scorer</td>\n      <td id=\"T_b7f36_row2_col2\" class=\"data row2 col2\" >0.99</td>\n      <td id=\"T_b7f36_row2_col3\" class=\"data row2 col3\" >12</td>\n    </tr>\n    <tr>\n      <th id=\"T_b7f36_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n      <td id=\"T_b7f36_row3_col0\" class=\"data row3 col0\" >0</td>\n      <td id=\"T_b7f36_row3_col1\" class=\"data row3 col1\" >recall</td>\n      <td id=\"T_b7f36_row3_col2\" class=\"data row3 col2\" >1.00</td>\n      <td id=\"T_b7f36_row3_col3\" class=\"data row3 col3\" >13</td>\n    </tr>\n    <tr>\n      <th id=\"T_b7f36_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n      <td id=\"T_b7f36_row4_col0\" class=\"data row4 col0\" >1</td>\n      <td id=\"T_b7f36_row4_col1\" class=\"data row4 col1\" >recall</td>\n      <td id=\"T_b7f36_row4_col2\" class=\"data row4 col2\" >1.00</td>\n      <td id=\"T_b7f36_row4_col3\" class=\"data row4 col3\" >13</td>\n    </tr>\n    <tr>\n      <th id=\"T_b7f36_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n      <td id=\"T_b7f36_row5_col0\" class=\"data row5 col0\" >2</td>\n      <td id=\"T_b7f36_row5_col1\" class=\"data row5 col1\" >recall</td>\n      <td id=\"T_b7f36_row5_col2\" class=\"data row5 col2\" >0.83</td>\n      <td id=\"T_b7f36_row5_col3\" class=\"data row5 col3\" >12</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "198d3042f8db4c1d88a8d9151147ea29": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "67ab2a2651074d5eb453460e2e70e24d": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "0018789d8e63455985e9ec9ba03b73f9": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "48aa75b48dde481db8aa843bf1ce047b": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}}}
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "99bc59778b0b40759de3f9e9300bae1a"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  3.313 seconds)


.. _sphx_glr_download_checks_gallery_tabular_model_evaluation_plot_single_dataset_performance.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_single_dataset_performance.py <plot_single_dataset_performance.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_single_dataset_performance.ipynb <plot_single_dataset_performance.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
