0.9/_sources/checks_gallery/tabular/model_evaluation/plot_single_dataset_performance.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "checks_gallery/tabular/model_evaluation/plot_single_dataset_performance.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_checks_gallery_tabular_model_evaluation_plot_single_dataset_performance.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_checks_gallery_tabular_model_evaluation_plot_single_dataset_performance.py:


.. _plot_tabular_single_dataset_performance:

Single Dataset Performance
*****************************
This notebook provides an overview for using and understanding single dataset performance check.

**Structure:**

* `What is the purpose of the check? <#what-is-the-purpose-of-the-check>`__
* `Generate data & model <#generate-data-model>`__
* `Run the check <#run-the-check>`__
* `Define a condition <#define-a-condition>`__
* `Using a custom scorer <#using-a-custom-scorer>`__

What is the purpose of the check?
==================================
This check is designed for evaluating a model's performance on a labeled dataset based on a scorer or multiple scorers.

Scorers are a convention of sklearn to evaluate a model,
it is a function which accepts (model, X, y_true) and returns a float result which is the score.
A sklearn convention is that higher scores are better than lower scores. For additional details `see scorers
documentation <https://scikit-learn.org/stable/modules/model_evaluation.html#scoring>`_.

The default scorers that are used are F1, Percision, and Recall for Classification
and Negative Root Mean Square Error, Negative Mean Absolute Error, and R2 for Regression.

.. GENERATED FROM PYTHON SOURCE LINES 31-33

Generate data & model
======================

.. GENERATED FROM PYTHON SOURCE LINES 33-39

.. code-block:: default


    from deepchecks.tabular.datasets.classification.iris import load_data, load_fitted_model

    _, test_dataset = load_data()
    model = load_fitted_model()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/deepchecks/deepchecks/deepchecks/tabular/datasets/classification/iris.py:124: DeprecationWarning:

    classification_label value for label type is deprecated, allowed task types are multiclass, binary and regression.





.. GENERATED FROM PYTHON SOURCE LINES 40-45

Run the check
==============

You can select which scorers to use by passing either a list or a dict of scorers to the check,
the full list of possible scorers can be seen at scorers.py.

.. GENERATED FROM PYTHON SOURCE LINES 45-52

.. code-block:: default


    from deepchecks.tabular.checks import SingleDatasetPerformance

    check = SingleDatasetPerformance(scorers=['recall_per_class', 'precision_per_class', 'f1_macro', 'f1_micro'])
    result = check.run(test_dataset, model)
    result.show()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Single Dataset Performance</title>
        <link rel="icon" type="image/x-icon" href="https://deepchecks.com/wp-content/themes/deepchecks/assets/favicons/favicon.ico">
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
                background-color: white;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
    </head>
    <body>
        <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.1/dist/embed.js" crossorigin="anonymous"></script>
    

    <script type="application/vnd.jupyter.widget-state+json">
    {"version_major": 2, "version_minor": 0, "state": {"46f0c717f4284a44b330cb8b98469145": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "children": ["IPY_MODEL_46584c39f86246cc9edcdd6ad18a71d6", "IPY_MODEL_550cb39c02db4b06a00c51a3a355c158", "IPY_MODEL_ec19b8af9ce344918f1e6f1d3fe8c97e", "IPY_MODEL_2afe8e7b9d7a486d9ac3b5f5914b624e"], "layout": "IPY_MODEL_ff2cafe8e2744ae5b499bc12cb71bb08"}}, "46584c39f86246cc9edcdd6ad18a71d6": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_f5f43207110345b5bd3689e17fda226c", "style": "IPY_MODEL_be58d4a444f842e3a4d05fafb050bb2e", "value": "<h4><b>Single Dataset Performance</b></h4>"}}, "f5f43207110345b5bd3689e17fda226c": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "be58d4a444f842e3a4d05fafb050bb2e": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "550cb39c02db4b06a00c51a3a355c158": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_e2bf35f3386e46f6a4417782eecb403e", "style": "IPY_MODEL_505590a7a3494fe5ad71411acf4b614e", "value": "<p>Summarize given model performance on the train and test datasets based on selected scorers. <a href=\"https://docs.deepchecks.com/0.9/checks_gallery/tabular/model_evaluation/plot_single_dataset_performance.html?utm_source=display_output&utm_medium=referral&utm_campaign=check_link\" target=\"_blank\">Read More...</a></p>"}}, "e2bf35f3386e46f6a4417782eecb403e": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "505590a7a3494fe5ad71411acf4b614e": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "ec19b8af9ce344918f1e6f1d3fe8c97e": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_e07d926459c341e680f567e87e4a3634", "style": "IPY_MODEL_e892aa19c3ad442b98a5455bf1ae44ae"}}, "e07d926459c341e680f567e87e4a3634": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "e892aa19c3ad442b98a5455bf1ae44ae": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "2afe8e7b9d7a486d9ac3b5f5914b624e": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_fd943f9609a2430396562f25b3c6aed1", "IPY_MODEL_ad29ec4fc8054f7f9d0b991ba865e196"], "layout": "IPY_MODEL_9b1768d9023d4ddd90708dd60766ded6"}}, "fd943f9609a2430396562f25b3c6aed1": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_917771a5739f4f7299e41a6061018f64", "style": "IPY_MODEL_8fcd71c9140349d79877fecbb77b72c7", "value": "<h5><b>Additional Outputs</b></h5>"}}, "917771a5739f4f7299e41a6061018f64": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "8fcd71c9140349d79877fecbb77b72c7": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "ad29ec4fc8054f7f9d0b991ba865e196": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_ca6b6440acd146928b5f40d22cb6f393", "style": "IPY_MODEL_084962f79e0d49e08123b797574aead4", "value": "<style type=\"text/css\">\n#T_e7595_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_e7595_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_e7595_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_e7595_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_e7595_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_e7595_\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th class=\"col_heading level0 col0\" >Class</th>\n      <th class=\"col_heading level0 col1\" >Metric</th>\n      <th class=\"col_heading level0 col2\" >Value</th>\n      <th class=\"col_heading level0 col3\" >Number of samples</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_e7595_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n      <td id=\"T_e7595_row0_col0\" class=\"data row0 col0\" >0</td>\n      <td id=\"T_e7595_row0_col1\" class=\"data row0 col1\" >recall</td>\n      <td id=\"T_e7595_row0_col2\" class=\"data row0 col2\" >1.00</td>\n      <td id=\"T_e7595_row0_col3\" class=\"data row0 col3\" >13.00</td>\n    </tr>\n    <tr>\n      <th id=\"T_e7595_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n      <td id=\"T_e7595_row1_col0\" class=\"data row1 col0\" >1</td>\n      <td id=\"T_e7595_row1_col1\" class=\"data row1 col1\" >recall</td>\n      <td id=\"T_e7595_row1_col2\" class=\"data row1 col2\" >1.00</td>\n      <td id=\"T_e7595_row1_col3\" class=\"data row1 col3\" >13.00</td>\n    </tr>\n    <tr>\n      <th id=\"T_e7595_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n      <td id=\"T_e7595_row2_col0\" class=\"data row2 col0\" >2</td>\n      <td id=\"T_e7595_row2_col1\" class=\"data row2 col1\" >recall</td>\n      <td id=\"T_e7595_row2_col2\" class=\"data row2 col2\" >0.83</td>\n      <td id=\"T_e7595_row2_col3\" class=\"data row2 col3\" >12.00</td>\n    </tr>\n    <tr>\n      <th id=\"T_e7595_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n      <td id=\"T_e7595_row3_col0\" class=\"data row3 col0\" >0</td>\n      <td id=\"T_e7595_row3_col1\" class=\"data row3 col1\" >precision</td>\n      <td id=\"T_e7595_row3_col2\" class=\"data row3 col2\" >1.00</td>\n      <td id=\"T_e7595_row3_col3\" class=\"data row3 col3\" >13.00</td>\n    </tr>\n    <tr>\n      <th id=\"T_e7595_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n      <td id=\"T_e7595_row4_col0\" class=\"data row4 col0\" >1</td>\n      <td id=\"T_e7595_row4_col1\" class=\"data row4 col1\" >precision</td>\n      <td id=\"T_e7595_row4_col2\" class=\"data row4 col2\" >0.87</td>\n      <td id=\"T_e7595_row4_col3\" class=\"data row4 col3\" >13.00</td>\n    </tr>\n    <tr>\n      <th id=\"T_e7595_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n      <td id=\"T_e7595_row5_col0\" class=\"data row5 col0\" >2</td>\n      <td id=\"T_e7595_row5_col1\" class=\"data row5 col1\" >precision</td>\n      <td id=\"T_e7595_row5_col2\" class=\"data row5 col2\" >1.00</td>\n      <td id=\"T_e7595_row5_col3\" class=\"data row5 col3\" >12.00</td>\n    </tr>\n    <tr>\n      <th id=\"T_e7595_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n      <td id=\"T_e7595_row6_col0\" class=\"data row6 col0\" ><NA></td>\n      <td id=\"T_e7595_row6_col1\" class=\"data row6 col1\" >f1_macro</td>\n      <td id=\"T_e7595_row6_col2\" class=\"data row6 col2\" >0.95</td>\n      <td id=\"T_e7595_row6_col3\" class=\"data row6 col3\" >nan</td>\n    </tr>\n    <tr>\n      <th id=\"T_e7595_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n      <td id=\"T_e7595_row7_col0\" class=\"data row7 col0\" ><NA></td>\n      <td id=\"T_e7595_row7_col1\" class=\"data row7 col1\" >f1_micro</td>\n      <td id=\"T_e7595_row7_col2\" class=\"data row7 col2\" >0.95</td>\n      <td id=\"T_e7595_row7_col3\" class=\"data row7 col3\" >nan</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "ca6b6440acd146928b5f40d22cb6f393": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "084962f79e0d49e08123b797574aead4": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "9b1768d9023d4ddd90708dd60766ded6": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "ff2cafe8e2744ae5b499bc12cb71bb08": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}}}
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "46f0c717f4284a44b330cb8b98469145"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 53-59

Define a condition
===================
We can define on our check a condition to validate that the different metric scores are above a certain threshold.
Using the ``class_mode`` argument we can define select a sub set of the classes to use for the condition.

Let's add a condition to the check and see what happens when it fails:

.. GENERATED FROM PYTHON SOURCE LINES 59-64

.. code-block:: default


    check.add_condition_greater_than(threshold=0.85, class_mode='all')
    result = check.run(test_dataset, model)
    result.show(show_additional_outputs=False)






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Single Dataset Performance</title>
        <link rel="icon" type="image/x-icon" href="https://deepchecks.com/wp-content/themes/deepchecks/assets/favicons/favicon.ico">
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
                background-color: white;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
    </head>
    <body>
        <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.1/dist/embed.js" crossorigin="anonymous"></script>
    

    <script type="application/vnd.jupyter.widget-state+json">
    {"version_major": 2, "version_minor": 0, "state": {"c2ef99603c4741e8b0374585202ca137": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "children": ["IPY_MODEL_67eba24b358544c5a82fb970734cf3c6", "IPY_MODEL_8754cf5527ac4ffeac481f477bc106bd", "IPY_MODEL_3d62ce7b782342bfb366d90a792cbdb4"], "layout": "IPY_MODEL_a8042a5e2d144c1ba24cf9f35254818f"}}, "67eba24b358544c5a82fb970734cf3c6": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_a2d212d12dab435498ebd31073679fbb", "style": "IPY_MODEL_237f4d80c6c3485fb80843c656e329a5", "value": "<h4><b>Single Dataset Performance</b></h4>"}}, "a2d212d12dab435498ebd31073679fbb": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "237f4d80c6c3485fb80843c656e329a5": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "8754cf5527ac4ffeac481f477bc106bd": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_ca057b82a39c49afb3b5545ca1202c85", "style": "IPY_MODEL_7bde5d8bb1bf457c9db11a4ecf4a1121", "value": "<p>Summarize given model performance on the train and test datasets based on selected scorers. <a href=\"https://docs.deepchecks.com/0.9/checks_gallery/tabular/model_evaluation/plot_single_dataset_performance.html?utm_source=display_output&utm_medium=referral&utm_campaign=check_link\" target=\"_blank\">Read More...</a></p>"}}, "ca057b82a39c49afb3b5545ca1202c85": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "7bde5d8bb1bf457c9db11a4ecf4a1121": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "3d62ce7b782342bfb366d90a792cbdb4": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_b5ac166129734c77a761be7b0b47ec3f", "style": "IPY_MODEL_14537fe4a1ae4c8791efbff9df4b4485", "value": "<h5><b>Conditions Summary</b></h5><style type=\"text/css\">\n#T_f38d1_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_f38d1_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_f38d1_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_f38d1_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_f38d1_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_f38d1_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Status</th>\n      <th class=\"col_heading level0 col1\" >Condition</th>\n      <th class=\"col_heading level0 col2\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_f38d1_row0_col0\" class=\"data row0 col0\" ><div style=\"color: red;text-align: center\">\u2716</div></td>\n      <td id=\"T_f38d1_row0_col1\" class=\"data row0 col1\" >Selected metrics scores are greater than 0.85</td>\n      <td id=\"T_f38d1_row0_col2\" class=\"data row0 col2\" >Failed for metrics: ['recall']</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "b5ac166129734c77a761be7b0b47ec3f": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "14537fe4a1ae4c8791efbff9df4b4485": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "a8042a5e2d144c1ba24cf9f35254818f": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}}}
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "c2ef99603c4741e8b0374585202ca137"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 65-66

We detected that the Recall score is below specified threshold in at least one of the classes.

.. GENERATED FROM PYTHON SOURCE LINES 68-72

Using a custom scorer
=========================
In addition to the built-in scorers, we can define our own scorer based on sklearn api
and run it using the check alongside other scorers:

.. GENERATED FROM PYTHON SOURCE LINES 72-80

.. code-block:: default


    from sklearn.metrics import fbeta_score, make_scorer

    fbeta_scorer = make_scorer(fbeta_score, labels=[0, 1, 2], average=None, beta=0.2)

    check = SingleDatasetPerformance(scorers={'my scorer': fbeta_scorer, 'recall': 'recall_per_class'})
    result = check.run(test_dataset, model)
    result.show()





.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Single Dataset Performance</title>
        <link rel="icon" type="image/x-icon" href="https://deepchecks.com/wp-content/themes/deepchecks/assets/favicons/favicon.ico">
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
                background-color: white;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
    </head>
    <body>
        <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.1/dist/embed.js" crossorigin="anonymous"></script>
    

    <script type="application/vnd.jupyter.widget-state+json">
    {"version_major": 2, "version_minor": 0, "state": {"9098978bfcc74a908970f77bef326b64": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "children": ["IPY_MODEL_b5af1b3a7e4e416cb149d71b5b4c4f3e", "IPY_MODEL_507fe6842d14412587b421ed307aa08b", "IPY_MODEL_d178dd90ecb649f2bc278d62e813c7fb", "IPY_MODEL_7459fb10855b4037abc7e1764561531d"], "layout": "IPY_MODEL_54488861514f44359b70632620593d78"}}, "b5af1b3a7e4e416cb149d71b5b4c4f3e": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_611ca0da88f540cc813f2991cf94b9a1", "style": "IPY_MODEL_42da52a8bac7445c89e49659e8621d05", "value": "<h4><b>Single Dataset Performance</b></h4>"}}, "611ca0da88f540cc813f2991cf94b9a1": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "42da52a8bac7445c89e49659e8621d05": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "507fe6842d14412587b421ed307aa08b": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_9020cb7aa62049c28ed1085393133cfa", "style": "IPY_MODEL_4e19b2f239de46d08c3b6d6fe1099545", "value": "<p>Summarize given model performance on the train and test datasets based on selected scorers. <a href=\"https://docs.deepchecks.com/0.9/checks_gallery/tabular/model_evaluation/plot_single_dataset_performance.html?utm_source=display_output&utm_medium=referral&utm_campaign=check_link\" target=\"_blank\">Read More...</a></p>"}}, "9020cb7aa62049c28ed1085393133cfa": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "4e19b2f239de46d08c3b6d6fe1099545": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "d178dd90ecb649f2bc278d62e813c7fb": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_fb7f7ce627b043b3b90d8d8fb64605f9", "style": "IPY_MODEL_a0cc6f718b74443b86daf1a111bb9ac3"}}, "fb7f7ce627b043b3b90d8d8fb64605f9": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "a0cc6f718b74443b86daf1a111bb9ac3": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "7459fb10855b4037abc7e1764561531d": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_0dcd72b0e22e4261986f4181107d0e0c", "IPY_MODEL_360f0733d8c24216a13111af4cd76ac6"], "layout": "IPY_MODEL_71ea6cecbb964e40b220dc31f47fd510"}}, "0dcd72b0e22e4261986f4181107d0e0c": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_096f13b013984634bf6ea52823a5f137", "style": "IPY_MODEL_36015d8382c04b37b7b2279d5238f3ea", "value": "<h5><b>Additional Outputs</b></h5>"}}, "096f13b013984634bf6ea52823a5f137": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "36015d8382c04b37b7b2279d5238f3ea": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "360f0733d8c24216a13111af4cd76ac6": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_45ebf5963d56494c81b0bdce284b0268", "style": "IPY_MODEL_4aaa71f142c84a15b59582d6aca971d0", "value": "<style type=\"text/css\">\n#T_c2d3d_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_c2d3d_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_c2d3d_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_c2d3d_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_c2d3d_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_c2d3d_\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th class=\"col_heading level0 col0\" >Class</th>\n      <th class=\"col_heading level0 col1\" >Metric</th>\n      <th class=\"col_heading level0 col2\" >Value</th>\n      <th class=\"col_heading level0 col3\" >Number of samples</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_c2d3d_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n      <td id=\"T_c2d3d_row0_col0\" class=\"data row0 col0\" >0</td>\n      <td id=\"T_c2d3d_row0_col1\" class=\"data row0 col1\" >my scorer</td>\n      <td id=\"T_c2d3d_row0_col2\" class=\"data row0 col2\" >1.00</td>\n      <td id=\"T_c2d3d_row0_col3\" class=\"data row0 col3\" >13</td>\n    </tr>\n    <tr>\n      <th id=\"T_c2d3d_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n      <td id=\"T_c2d3d_row1_col0\" class=\"data row1 col0\" >1</td>\n      <td id=\"T_c2d3d_row1_col1\" class=\"data row1 col1\" >my scorer</td>\n      <td id=\"T_c2d3d_row1_col2\" class=\"data row1 col2\" >0.87</td>\n      <td id=\"T_c2d3d_row1_col3\" class=\"data row1 col3\" >13</td>\n    </tr>\n    <tr>\n      <th id=\"T_c2d3d_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n      <td id=\"T_c2d3d_row2_col0\" class=\"data row2 col0\" >2</td>\n      <td id=\"T_c2d3d_row2_col1\" class=\"data row2 col1\" >my scorer</td>\n      <td id=\"T_c2d3d_row2_col2\" class=\"data row2 col2\" >0.99</td>\n      <td id=\"T_c2d3d_row2_col3\" class=\"data row2 col3\" >12</td>\n    </tr>\n    <tr>\n      <th id=\"T_c2d3d_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n      <td id=\"T_c2d3d_row3_col0\" class=\"data row3 col0\" >0</td>\n      <td id=\"T_c2d3d_row3_col1\" class=\"data row3 col1\" >recall</td>\n      <td id=\"T_c2d3d_row3_col2\" class=\"data row3 col2\" >1.00</td>\n      <td id=\"T_c2d3d_row3_col3\" class=\"data row3 col3\" >13</td>\n    </tr>\n    <tr>\n      <th id=\"T_c2d3d_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n      <td id=\"T_c2d3d_row4_col0\" class=\"data row4 col0\" >1</td>\n      <td id=\"T_c2d3d_row4_col1\" class=\"data row4 col1\" >recall</td>\n      <td id=\"T_c2d3d_row4_col2\" class=\"data row4 col2\" >1.00</td>\n      <td id=\"T_c2d3d_row4_col3\" class=\"data row4 col3\" >13</td>\n    </tr>\n    <tr>\n      <th id=\"T_c2d3d_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n      <td id=\"T_c2d3d_row5_col0\" class=\"data row5 col0\" >2</td>\n      <td id=\"T_c2d3d_row5_col1\" class=\"data row5 col1\" >recall</td>\n      <td id=\"T_c2d3d_row5_col2\" class=\"data row5 col2\" >0.83</td>\n      <td id=\"T_c2d3d_row5_col3\" class=\"data row5 col3\" >12</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "45ebf5963d56494c81b0bdce284b0268": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "4aaa71f142c84a15b59582d6aca971d0": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "71ea6cecbb964e40b220dc31f47fd510": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "54488861514f44359b70632620593d78": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}}}
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "9098978bfcc74a908970f77bef326b64"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  3.287 seconds)


.. _sphx_glr_download_checks_gallery_tabular_model_evaluation_plot_single_dataset_performance.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_single_dataset_performance.py <plot_single_dataset_performance.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_single_dataset_performance.ipynb <plot_single_dataset_performance.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
